--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bitstamp",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "bitstamp rest and websocket v1 and v2 api client",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,11 @@
     "ripple",
     "withdrawal",
     "transfer",
-    "order"
+    "order",
+    "cluster",
+    "pusher",
+    "ticker",
+    "books"
   ],
   "author": "Christian Froehlingsdorf <chris@5cf.de>",
   "license": "MIT",
@@ -35,9 +39,9 @@
   },
   "homepage": "https://github.com/krystianity/node-bitstamp#readme",
   "dependencies": {
-    "bluebird": "~3.5.0",
-    "debug": "~3.0.1",
-    "pusher-js": "~4.1.0",
-    "request": "~2.81.0"
+    "bluebird": "~3.5.1",
+    "debug": "~3.1.0",
+    "pusher-js": "~4.2.1",
+    "request": "~2.83.0"
   }
 }
