--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "transfer",
     "order",
     "cluster",
-    "pusher",
     "ticker",
     "books"
   ],
@@ -42,7 +41,8 @@
   "dependencies": {
     "bluebird": "~3.5.3",
     "debug": "~4.1.0",
-    "pusher-js": "~4.3.1",
-    "request": "~2.88.0"
+    "reconnecting-websocket": "^4.4.0",
+    "request": "~2.88.0",
+    "ws": "^7.3.1"
   }
 }
