--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   "dependencies": {
     "bluebird": "~3.5.3",
     "debug": "~4.1.0",
+    "node-fetch": "^2.6.1",
     "reconnecting-websocket": "^4.4.0",
-    "request": "~2.88.0",
     "ws": "^7.3.1"
   }
 }
